# xenia-droid

./: .gitignore  BUILDING.md  CHANGELOG.md  CORE_INTEGRATION.md  EXTRAÇÃO_DE_CAPAS.md  FEATURES.md  LEIA-ME_COMPLETO.md  PROGRESS.md  PROJECT_SUMMARY.txt  README_ANDROID.md  README_PACOTE_FINAL.md  STANDALONE.md  build.gradle.kts  build.sh  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  xenia_android.cpp  xenia_android.h  xenia_game_utils.cpp  xenia_game_utils.h  xenia_jni.cpp
app/src/main/cpp/xenia/base/: cvar.cc
app/src/main/java/com/xenia/emulator/: MainActivity.kt
app/src/main/java/com/xenia/emulator/data/model/: Game.kt
app/src/main/java/com/xenia/emulator/data/repository/: GameRepository.kt  GameRepositoryUpdated.kt
app/src/main/java/com/xenia/emulator/native/: XeniaNative.kt  XeniaNativeUpdated.kt
app/src/main/java/com/xenia/emulator/ui/: XeniaApp.kt
app/src/main/java/com/xenia/emulator/ui/components/: GameCard.kt
app/src/main/java/com/xenia/emulator/ui/navigation/: Screen.kt
app/src/main/java/com/xenia/emulator/ui/screens/: AboutScreen.kt  HomeScreen.kt  HomeScreenNew.kt  SettingsScreen.kt
app/src/main/java/com/xenia/emulator/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/xenia/emulator/viewmodel/: GamesViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
